# real-estate-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mcp-inspector.json  pyproject.toml  railway.toml
src/: __init__.py  auth.py  config.py  exceptions.py  main.py  mcp_server.py
src/db/: __init__.py  seed.py  session.py
src/models/: __init__.py  property.py
src/repositories/: __init__.py  property_repository.py
src/schemas/: __init__.py  property.py
src/services/: __init__.py  content_generator.py  property_service.py
templates/: listing.html.j2
tests/: __init__.py  conftest.py  test_tools.py
